2012-02-13  ChangSeok Oh  <shivamidow@gmail.com>

        [GTK] Revise configuration for MHTML
        https://bugs.webkit.org/show_bug.cgi?id=78364

        Reviewed by Gustavo Noronha Silva.

        Added some lines to show checking messages, whether mhtml is enabled or not
        during configuration and the configuration result for mhtml.
        MHTML is a web page archive format used to combine resources
        that are typically represented by external links (such as images, Flash animations,
        Java applets, audio files) together with HTML code into a single file.
        http://en.wikipedia.org/wiki/MHTML

        * configure.ac:

2012-02-06  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] Drop support for the Curl network backend.
        https://bugs.webkit.org/show_bug.cgi?id=77874

        Reviewed by Eric Seidel.

        Nobody seems to be maintaining the Curl backend in WebCore, the
        EFL port developers all seem to be using the Soup backend and the
        port itself has many features which are only implemented for the
        latter.

        * Source/cmake/OptionsEfl.cmake: Remove network backend selection
        checks and unconditionally require Glib and Libsoup, bump the
        required LibSoup version to the same one the GTK+ port looks for,
        since we share the same network backend.

2012-02-12  Ryosuke Niwa  <rniwa@webkit.org>

        Another perf-o-matic build fix.

        * Websites/webkit-perf.appspot.com/report_process_handler.py:
        (ReportProcessHandler._create_build_if_possible):

2012-02-12  Ryosuke Niwa  <rniwa@webkit.org>

        Perf-o-matic build fix.

        * Websites/webkit-perf.appspot.com/report_handler.py:
        (ReportHandler.post):

2012-02-10  Ryosuke Niwa  <rniwa@webkit.org>

        REGRESSION: Perf-o-matic adds duplicated test results
        https://bugs.webkit.org/show_bug.cgi?id=78373

        Reviewed by Hajime Morita.
